--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -67,6 +67,13 @@ img{
     width:250px;
     height:230px;
 }
+.img-ico{
+    align-content: center;
+    border-radius: 50%;
+    display: block;
+    width:80px;
+    height:60px;
+}
 .img-rounded{
   display: block;
   max-width: auto;
